Fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ main {
     width: 17em;
 }
 
+main div {
+    padding: 2em 2em 3.5em 2em;
+}
+
 
 
 .sedans {
